--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,14 @@
 <html>
   <head>
-  <script type="text/javascript" src="/js/scripts.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <script type="text/javascript" src="/js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta charset="UTF-8">
   </head>
   <body>
     <center>
-      <div class="title">Secure Calc</div><br>
+      <div class="title">ISBN Verification</div><br>
       <%= yield %>
 
       <br><p id="error_out" class="errormsg"></p>
